--- a/sandbox/todo/index.html
+++ b/sandbox/todo/index.html
@@ -1,40 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Todo App</title>
-</head>
-
-<body>
-
+<!doctype html>
+<html class="no-js" lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <title>Todo App</title>
+  </head>
+  <body>
   <h1>Todo App</h1>
 
   <div>
     <button onclick="handlers.toggleAll();">Toggle All</button>
   </div>
-
   <div>
     <button onclick="handlers.addTodo();">Add</button>
     <input id="addTodoTextInput" type="text">
   </div>
-
   <div>
     <button onclick="handlers.changeTodo();">Change</button>
     <input id="changeTodoPositionInput" type="number">
     <input id="changeTodoTextInput" type="text">
   </div>
-
+  <div>
+    <button onclick="handlers.deleteTodo();">Delete</button>
+    <input id="deleteTodoPositionInput" type="number">
+  </div>
   <div>
     <button onclick="handlers.toggleCompleted();">Toggle Completed</button>
     <input id="toggleCompletedPositionInput" type="number">
   </div>
 
   <ul></ul>
-
-  <script src="index.js"></script>
+  <script src="js/script.js"></script>
+  <!-- <script src="js/index.js"></script> -->
 </body>
-
 </html>
