Adding Github.io index file

--- a/index.html
+++ b/index.html
@@ -1,19 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+<head>  
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Test Git command line changes - updated again</title>
-  <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script>
+  <!-- <script src="https://code.jquery.com/jquery-3.3.1.js" type="text/javascript"></script> -->
+
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Paytone+One" rel="stylesheet" type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,900" rel="stylesheet" type='text/css'>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="css/portfolio-main.min.css" rel="stylesheet">
   <!-- add CSS external file reference here -->
 </head>
 <body>
   <div id="container">
-    <ul>
-      <li class="homework-class"></li>
-      <li class="homework-class"></li>
-      <li class="homework-class"></li>
-    </ul>
+    <nav class="site-navigation">
+      <div class="nav-container">
+        <div class="brand underline">
+          <a href="#!">
+            Jeremy
+            <span class="strong">Wilson</span>
+          </a>
+        </div>
+        <div class="menu">
+          <a href="sandbox" title="Github.io Sandbox Test Area" class="">Sandbox</a>
+          <a href="http://www.jeremywilson.com/" title="Personal Website and Portfolio" target="_blank" class="">Personal Website (under migration)</a>
+          <a href="https://www.linkedin.com/in/jeremybwilson/" title="Jeremy Wilson LinkedIn Profile" target="_blank" class="">LinkedIn Profile</a>
+          <a href="#!">Contact</a>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <div class="container flex ac">
+        <div class="hero-container ">
+          <h1>Jeremy Wilson</h1>
+        </div>
+      </div>
+    </main>
+  <footer class="footer-bottom">
+    <div class="container">
+      <p>
+        &copy; 2018 Jeremy Wilson. All rights reserved.
+
+      </p>
+    </div>
+  </footer>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.8.4/prism.min.js"></script>
   </div>
 </body>
 </html>
