--- a/destinyapi/index.html
+++ b/destinyapi/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Destiny 2 API Test</title>
     <link href="https://fonts.googleapis.com/css?family=Dosis:400,700" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
     <!-- Adding Zurb foundation CSS here -->
     <link rel="stylesheet" href="../css/foundation.css">
     <link rel="stylesheet" href="../css/app.css">
+    <link rel="stylesheet" href="style.css" >
   </head>
   <body>
     <div class="grid-container">
