Cleaned up code formatting in HTML files

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </a>
         </div>
         <div class="menu">
-          <a href="/sandbox_demos" title="Github.io Sandbox Test Area" class="">Sandbox</a>
+          <a href="/sandbox_demos/portfolio/index.html" title="Sandbox Test Area" class="">Sandbox</a>
           <a href="http://www.jeremywilson.com/" title="Personal Website and Portfolio" target="_blank" class="">Personal Website (under migration)</a>
           <a href="https://www.linkedin.com/in/jeremybwilson/" title="Jeremy Wilson LinkedIn Profile" target="_blank" class="">LinkedIn Profile</a>
           <a href="#!">Contact</a>
